<resources>
    <string name="app_name">ReEng</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
<<<<<<< HEAD
    <string name="events">Events</string>
    <string name="goals">Goals</string>
    <string name="sales">Sales</string>
=======
    <string name="user_pic">user_pic</string>
    <string name="user">User</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="n_a">N/A</string>
    <string name="id">ID</string>
    <string name="member_status">Member Status</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
>>>>>>> 623a149bf00b2668ed501ab3ed08871eb6b2b173
</resources>
