<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/idCard"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:src="@mipmap/temp_user_pic"
            android:contentDescription="@string/user_pic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name"/>

            <TextView
                android:id="@+id/fName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n_a"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name"/>

            <TextView
                android:id="@+id/lName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n_a"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id"/>

            <TextView
                android:id="@+id/idTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n_a"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/member_status"/>

            <TextView
                android:id="@+id/memberStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n_a"/>

        </LinearLayout>




    </LinearLayout>

</RelativeLayout>