<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="15dp"
    android:background="#FFD700"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@mipmap/temp_user_pic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingTop="15dp"
            android:text="Tier 3"
            android:textSize="36dp"
            android:textStyle="bold"
            android:textAlignment="center"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/first_name"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="Brian"
            android:textStyle="bold"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/last_name"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="Domingo"
            android:textStyle="bold"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/id"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="100278569"
            android:textStyle="bold"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="Birth Date"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="05/17/1995"
            android:textStyle="bold"
            android:textSize="20dp" />

    </LinearLayout>


</LinearLayout>
