<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <!--tools:context=".LoginActivity">-->

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2.5"
        android:src="@drawable/ic_launcher_background"
        android:tint="@color/marketplaze_specs"
        android:contentDescription="@string/app_name" />

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

            <AutoCompleteTextView
                    android:id="@+id/username_or_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/black"
                    android:hint="."
                    android:inputType="text|textEmailAddress"
                    android:maxLines="1"
                tools:ignore="RtlHardcoded" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="."
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/black"
                    android:hint="."
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    tools:ignore="InvalidImeActionId,RtlHardcoded" />

            </android.support.design.widget.TextInputLayout>
            
            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:onClick="signIn"/>


            <Button
                android:id="@+id/sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:text="@string/sign_up"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/forgot_password_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/marketplaze_specs"
                android:text="@string/forgot_password"
                android:fontFamily="serif"
                android:textSize="12sp"
                android:textAlignment="center"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
